--- a/elternbrief/letters/templates/letters/index.html
+++ b/elternbrief/letters/templates/letters/index.html
@@ -1,1 +1,10 @@
-Sie sehen: den Index.
+{% extends "letters/base.html" %}
+
+{% block title %}Index{% endblock %}
+
+{% block content %}
+    <div class="w3-container w3-padding-64 w3-center" id="main">
+        <p>Sie sehen: den Index.</p>
+        <p>Sie sind nicht eingeloggt!</p>
+    </div>
+{% endblock %}
