--- a/elternbrief/letters/templates/letters/base.html
+++ b/elternbrief/letters/templates/letters/base.html
@@ -41,6 +41,12 @@
 {% endblock %}
 
 <div class="w3-container w3-padding-64 w3-center" id="main">
+    {% if error_message %}
+        <div class="w3-panel w3-red">
+            <h2>Fehler!</h2>
+            <p>{{ error_message }}</p>
+        </div>
+    {% endif %}
     {% block content %}
     {% endblock %}
 </div>
