--- a/elternbrief/letters/templates/letters/letters_index.html
+++ b/elternbrief/letters/templates/letters/letters_index.html
@@ -1,7 +1,20 @@
-{% extends 'letters/base.html' %}
+{% extends "letters/base.html" %}
 
-{% block title %}Briefe{% endblock %}
+{% load letters_extras %}
+
+{% block title %}Übersicht{% endblock %}
 
 {% block content %}
-    <p>Hier kommt noch was hin.</p>
+    <p>Folgende Elternbriefe müssen bestätigt werden:</p>
+
+    {# Display all children of user as well as all corresponding letters. #}
+    {% for child in children_list %}
+        <h3>{{ child }}</h3>
+        {% with child_id=child.id %}
+            {% for letter in letters|get_item:child_id %}
+                <p><a href="{% url 'letters:letter_detail'  letter.pk %}">{{ letter }}</a></p>
+            {% endfor %}
+        {% endwith %}
+    {% endfor %}
+
 {% endblock %}
