--- a/elternbrief/letters/templates/letters/letter_detail.html
+++ b/elternbrief/letters/templates/letters/letter_detail.html
@@ -4,46 +4,47 @@
 {% block title %}{{ letter }}t{% endblock %}
 
 {% block content %}
-    <div class="w3-row w3-center">
+    <div class="w3-row-padding w3-padding-64 w3-container w3-center">
+            {# Just an empty placeholder container to make the content stay centered. #}
+            <div class="w3-col l3 m2 w3-hide-small"><p></p></div>
 
-        {# Just an empty placeholder container to make the content stay centered. #}
-        <div class="w3-col m2 l4 w3-hide-small"><p></p></div>
+            <div class="w3-col l6 m8 s12">
+                <div class="w3-card-4">
 
-        <div class="w3-col m8 l4 s12">
-            <div class="w3-card-4">
-
-                <header class="w3-container w3-theme-d2 w3-left-align">
-                    <h1>{{ letter }}</h1>
-                </header>
-                <div class="w3-container w3-left-align">
-                    <p><b>Veröffentlichungsdatum:</b> {{ letter.date_published }}</p>
-                </div>
-
-                {% if letter.date_due %}
+                    <header class="w3-container w3-theme-d2 w3-left-align">
+                        <h1>{{ letter }}</h1>
+                    </header>
                     <div class="w3-container w3-left-align">
-                        <p><b>Fällig bis:</b> {{ letter.date_due }}</p>
+                        <p><b>Veröffentlichungsdatum:</b> {{ letter.date_published }}</p>
                     </div>
-                {% endif %}
 
-                {% if letter.teacher %}
+                    {% if letter.date_due %}
+                        <div class="w3-container w3-left-align">
+                            <p><b>Fällig bis:</b> {{ letter.date_due }}</p>
+                        </div>
+                    {% endif %}
+
+                    {% if letter.teacher %}
+                        <div class="w3-container w3-left-align">
+                            <p><b>Zuständige Lehrkraft:</b> {{ letter.teacher }}</p>
+                        </div>
+                    {% endif %}
+
                     <div class="w3-container w3-left-align">
-                        <p><b>Zuständige Lehrkraft:</b> {{ letter.teacher }}</p>
+                        <p><b>Muss {% if not letter.confirmation %}nicht {% endif %}bestätigt werden.</b> <i
+                                class="fa fa-info-circle"></i></p>
                     </div>
-                {% endif %}
 
-                <div class="w3-container w3-left-align">
-                    <p><b>Muss {% if not letter.confirmation %}nicht {% endif %}bestätigt werden.</b> <i
-                            class="fa fa-info-circle"></i></p>
-                </div>
-
-                <div class="w3-container" id="canvas">
-                    <embed src="{{ letter.document.url }}" type="application/pdf" width="100%" height="800px"/>
+                    <div class="w3-container" id="canvas">
+                        <embed src="{{ letter.document.url }}" type="application/pdf" width="100%" height="800px"/>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        {# Another empty placeholder container to make the content stay centered. #}
-        <div class="w3-col m2 l4 w3-hide-small"><p></p></div>
+            {# Another empty placeholder container to make the content stay centered. #}
+            <div class="w3-col l3 m2 w3-hide-small"><p></p></div>
+
+
 
     </div>
 {% endblock %}
