--- a/elternbrief/letters/templates/letters/base.html
+++ b/elternbrief/letters/templates/letters/base.html
@@ -7,14 +7,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Elternbrief - {% block title %}Startseite{% endblock %}</title>
+    <link rel="icon" type="image/svg+xml" href="{% static 'letters/icon.svg' %}" sizes="any"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'letters/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'letters/favicon-16x16.png' %}">
 
     <link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="https://www.w3schools.com/lib/w3-theme-indigo.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
-        body, h1, h2, h3, h4, h5, h6 {font-family: 'Open Sans', sans-serif}
+        body {
+            font-family: 'Open Sans', sans-serif;
+        }
+        h1, .w3-bar, button {
+            font-family: 'Montserrat', sans-serif;
+        }
+        a img.hover {
+            display: none;
+        }
+        a img.default {
+            display: inherit;
+        }
+        a:hover img.hover {
+            display: inherit;
+        }
+        a:hover img.default {
+            display: none;
+        }
     </style>
 </head>
 
@@ -24,28 +45,34 @@
 {% block navbar %}
     <div class="w3-top">
         <div class="w3-bar w3-card w3-large w3-left-align w3-theme">
+
+            {# Start page #}
             {% if request.path == '/' %}
-                <a href="{% url 'letters:index' %}" class="w3-bar-item w3-button w3-theme-l1"><i
-                        class="fa fa-home w3-margin-right"></i>Startseite</a>
+                <a href="{% url 'letters:index' %}" class="w3-bar-item w3-button w3-theme-l1 w3-hover-theme"><img
+                        height="20px" style="margin-right: 8px" src="{% static 'letters/icon_white.svg' %}">Startseite</a>
             {% else %}
-                <a href="{% url 'letters:index' %}" class="w3-bar-item w3-button"><i
-                        class="fa fa-home w3-margin-right"></i>Startseite</a>
+                <a href="{% url 'letters:index' %}" class="w3-bar-item w3-button w3-hover-white"><span><img
+                        height="20px" class="default" style="margin-right: 8px" src="{% static 'letters/icon_white.svg' %}"><img
+                        height="20px" class="hover" style="margin-right: 8px" src="{% static 'letters/icon.svg' %}"></span>Startseite</a>
             {% endif %}
 
+            {# Letters #}
             {% if '/letters/' in request.path %}
-                <a href="{% url 'letters:letters' %}" class="w3-bar-item w3-button w3-theme-l1">Elternbriefe</a>
+                <a href="{% url 'letters:letters' %}" class="w3-bar-item w3-button w3-theme-l1 w3-hover-white">Elternbriefe</a>
             {% else %}
-                <a href="{% url 'letters:letters' %}" class="w3-bar-item w3-button">Elternbriefe</a>
+                <a href="{% url 'letters:letters' %}" class="w3-bar-item w3-button w3-hover-white">Elternbriefe</a>
             {% endif %}
 
+            {# Login #}
             {% block login %}
                 {% if request.user.is_authenticated %}
                     {# If the user is logged in, show their username and a logout button in a dropdown menu #}
                     <div class="w3-dropdown-hover w3-right">
-                        <button class="w3-button" style="width:125px"><i class="fa fa-user"></i> {{ user.username }}
+                        <button class="w3-button w3-hover-white" style="width:150px"><i
+                                class="fa fa-user"></i> {{ user.username }}
                         </button>
                         <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                            <a href="{% url 'letters:logout' %}" class="w3-bar-item w3-button"><i
+                            <a href="{% url 'letters:logout' %}" class="w3-bar-item w3-button w3-hover-white"><i
                                     class="fa fa-sign-out"></i> Ausloggen</a>
                         </div>
                     </div>
@@ -59,8 +86,11 @@
     </div>
 {% endblock %}
 
+{% block content %}
+{% endblock %}
+
 {# Display any kind of error message passed by a view in a fancy red box. #}
-<div class="w3-container w3-padding-64 w3-center" id="main">
+<div class="w3-container w3-padding-64 w3-center">
     {% if messages %}
         {% for message in messages %}
             <div class="w3-panel w3-red">
@@ -69,8 +99,6 @@
             </div>
         {% endfor %}
     {% endif %}
-    {% block content %}
-    {% endblock %}
 </div>
 
 </body>
