--- a/elternbrief/letters/templates/letters/login.html
+++ b/elternbrief/letters/templates/letters/login.html
@@ -12,26 +12,32 @@
         </div>
     {% endif %}
 
-    <div class="w3-quarter"><p></p></div>
+    <div class="w3-row-padding w3-padding-64 w3-container">
+        <div class="w3-content w3-center">
+            <div class="w3-quarter"><p></p></div>
 
-    <div class="w3-card-4 w3-half">
-        <header class="w3-container w3-theme-d2 w3-left-align">
-            <h1>Login</h1>
-        </header>
-        <div class="w3-container w3-left-align">
-            <form action="{% url 'letters:login' %}" method="post">
-                {% csrf_token %}
-                <label>Nutzername</label>
-                <input class="w3-input" type="text" name="username" id="username">
+            <div class="w3-card-4 w3-half">
+                <header class="w3-container w3-theme w3-left-align">
+                    <h1>Login</h1>
+                </header>
+                <div class="w3-container w3-left-align">
+                    <form action="{% url 'letters:login' %}" method="post">
+                        {% csrf_token %}
+                        <label>Nutzername</label>
+                        <input class="w3-input w3-margin-bottom" type="text" name="username" id="username">
 
-                <label>Passwort</label>
-                <input class="w3-input" type="password" name="password" id="password">
+                        <label>Passwort</label>
+                        <input class="w3-input w3-margin-bottom" type="password" name="password" id="password">
 
-                <button class="w3-btn w3-theme-d2" type="submit">Absenden</button>
-            </form>
+                        <button class="w3-btn w3-theme-d2 w3-margin-bottom" type="submit">Absenden</button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="w3-quarter"><p></p></div>
         </div>
     </div>
 
-    <div class="w3-quarter"><p></p></div>
+
 
 {% endblock %}
