--- a/elternbrief/letters/templates/letters/base.html
+++ b/elternbrief/letters/templates/letters/base.html
@@ -18,21 +18,53 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
-        body { font-family: 'Open Sans', sans-serif; }
-        h1, .w3-bar, button { font-family: 'Montserrat', sans-serif; }
+        body {
+            font-family: 'Open Sans', sans-serif;
+        }
 
-        a img.hover { display: none; }
-        a img.default { display: inherit; }
-        a:hover img.hover { display: inherit; }
-        a:hover img.default {display: none;}
+        h1, .w3-bar, button {
+            font-family: 'Montserrat', sans-serif;
+        }
 
-        div .error { background-color: #f44336; }
-        div .warning { background-color: #ffeb3b; }
-        div .success { background-color: #4caf50; }
-        div .info { background-color: #2196f3; }
+        a img.hover {
+            display: none;
+        }
+
+        a img.default {
+            display: inherit;
+        }
+
+        a:hover img.hover {
+            display: inherit;
+        }
+
+        a:hover img.default {
+            display: none;
+        }
+
+        div .error {
+            background-color: #f44336;
+            color: white;
+        }
+
+        div .warning {
+            background-color: #ffeb3b;
+            color: black;
+        }
+
+        div .success {
+            background-color: #4caf50;
+            color: white;
+        }
+
+        div .info {
+            background-color: #2196f3;
+            color: white;
+        }
+
         div .message {
-            position: absolute;
-            {#top: 0px;#}
+            position: fixed;
+            margin-top: 50px;
         }
     </style>
 </head>
@@ -47,11 +79,14 @@
             {# Start page #}
             {% if request.path == '/' %}
                 <a href="{% url 'letters:index' %}" class="w3-bar-item w3-button w3-theme-l1 w3-hover-theme"><img
-                        height="20px" style="margin-right: 8px" src="{% static 'letters/icon_white.svg' %}">Startseite</a>
+                        height="20px" style="margin-right: 8px"
+                        src="{% static 'letters/icon_white.svg' %}">Startseite</a>
             {% else %}
                 <a href="{% url 'letters:index' %}" class="w3-bar-item w3-button w3-hover-white"><span><img
-                        height="20px" class="default" style="margin-right: 8px" src="{% static 'letters/icon_white.svg' %}"><img
-                        height="20px" class="hover" style="margin-right: 8px" src="{% static 'letters/icon.svg' %}"></span>Startseite</a>
+                        height="20px" class="default" style="margin-right: 8px"
+                        src="{% static 'letters/icon_white.svg' %}"><img
+                        height="20px" class="hover" style="margin-right: 8px"
+                        src="{% static 'letters/icon.svg' %}"></span>Startseite</a>
             {% endif %}
 
             {# Letters #}
@@ -86,10 +121,12 @@
 
 {% block messages %}
     {% if messages %}
-        <div class="w3-row w3-container">
-            <div class="w3-content w3-center">
+        <div class="w3-row w3-padding w3-container">
+            <div class="w3-center w3-content" style="margin-left: auto; margin-right: auto; width: 40%">
                 {% for message in messages %}
-                    <div class="w3-panel w3-card-4 w3-round-large message{% if message.tags %} {{ message.tags }}{% endif %}">
+                    <div class="w3-panel w3-card-4 w3-round message{% if message.tags %} {{ message.tags }}{% endif %}">
+                        <span onclick="this.parentElement.style.display='none'"
+                              class="w3-button w3-large w3-display-topright w3-hover-white">&times</span>
                         <h3>
                             {% if "error" in message.tags %}
                                 Fehler!
@@ -111,18 +148,6 @@
 
 {% block content %}
 {% endblock %}
-
-{# Display any kind of error message passed by a view in a fancy red box. #}
-<div class="w3-container w3-padding-64 w3-center">
-    {% if messages %}
-        {% for message in messages %}
-            <div class="w3-panel w3-red">
-                <h2>Fehler!</h2>
-                <p>{{ message }}</p>
-            </div>
-        {% endfor %}
-    {% endif %}
-</div>
 
 </body>
 </html>
