--- a/elternbrief/letters/templates/letters/index.html
+++ b/elternbrief/letters/templates/letters/index.html
@@ -5,7 +5,7 @@
 {% block title %}Startseite{% endblock %}
 
 {% block content %}
-    <header class="w3-container w3-theme w3-center" style="padding:128px 16px">
+    <header class="w3-container w3-theme w3-center" style="padding: 128px">
         <img src="{% static 'letters/vertical_white.svg' %}">
         <p class="w3-xlarge">Herzlich willkommen bei <i>Elternbrief!</i></p>
     </header>
