--- a/elternbrief/letters/templates/letters/base.html
+++ b/elternbrief/letters/templates/letters/base.html
@@ -26,6 +26,7 @@
             font-family: 'Montserrat', sans-serif;
         }
 
+        {# CSS for changing a button's icon when hovering over it (e.g. in the navbar) #}
         a img.hover {
             display: none;
         }
@@ -42,6 +43,7 @@
             display: none;
         }
 
+        {# CSS for different notification boxes #}
         div .error {
             background-color: #f44336;
             color: white;
@@ -78,15 +80,20 @@
 
             {# Start page #}
             {% if request.path == '/' %}
-                <a href="{% url 'letters:index' %}" class="w3-bar-item w3-button w3-theme-l1 w3-hover-theme"><img
-                        height="20px" style="margin-right: 8px"
-                        src="{% static 'letters/icon_white.svg' %}">Startseite</a>
+                <a href="{% url 'letters:index' %}" class="w3-bar-item w3-button w3-theme-l1 w3-hover-theme">
+                    <img height="20px" style="margin-right: 8px"
+                         src="{% static 'letters/icon_white.svg' %}">Startseite
+                </a>
             {% else %}
-                <a href="{% url 'letters:index' %}" class="w3-bar-item w3-button w3-hover-white"><span><img
-                        height="20px" class="default" style="margin-right: 8px"
-                        src="{% static 'letters/icon_white.svg' %}"><img
-                        height="20px" class="hover" style="margin-right: 8px"
-                        src="{% static 'letters/icon.svg' %}"></span>Startseite</a>
+                <a href="{% url 'letters:index' %}" class="w3-bar-item w3-button w3-hover-white">
+                    {# Make the icon change when hovering over it: #}
+                    <span>
+                        <img height="20px" class="default" style="margin-right: 8px"
+                             src="{% static 'letters/icon_white.svg' %}">
+                        <img height="20px" class="hover" style="margin-right: 8px"
+                             src="{% static 'letters/icon.svg' %}">
+                    </span>Startseite
+                </a>
             {% endif %}
 
             {# Letters #}
@@ -101,17 +108,19 @@
                 {% if request.user.is_authenticated %}
                     {# If the user is logged in, show their username and a logout button in a dropdown menu #}
                     <div class="w3-dropdown-hover w3-right">
-                        <button class="w3-button w3-hover-white" style="width:150px"><i
-                                class="fa fa-user"></i> {{ user.username }}
+                        <button class="w3-button w3-hover-white" style="width:150px">
+                            <i class="fa fa-user"></i> {{ user.username }}
                         </button>
                         <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                            <a href="{% url 'letters:logout' %}" class="w3-bar-item w3-button w3-hover-white"><i
-                                    class="fa fa-sign-out"></i> Ausloggen</a>
+                            <a href="{% url 'letters:logout' %}" class="w3-bar-item w3-button w3-hover-white">
+                                <i class="fa fa-sign-out"></i> Ausloggen
+                            </a>
                         </div>
                     </div>
                 {% else %}
-                    <a href="{% url 'letters:login' %}" class="w3-bar-item w3-button w3-right w3-hover-white"><i
-                            class="fa fa-user-circle"></i> Login</a>
+                    <a href="{% url 'letters:login' %}" class="w3-bar-item w3-button w3-right w3-hover-white">
+                        <i class="fa fa-user-circle"></i> Login
+                    </a>
                 {% endif %}
             {% endblock %}
 
@@ -119,6 +128,7 @@
     </div>
 {% endblock %}
 
+{# Display floating notifications at the top of the page: #}
 {% block messages %}
     {% if messages %}
         <div class="w3-row w3-padding w3-container">
@@ -126,7 +136,8 @@
                 {% for message in messages %}
                     <div class="w3-panel w3-card-4 w3-round message{% if message.tags %} {{ message.tags }}{% endif %}">
                         <span onclick="this.parentElement.style.display='none'"
-                              class="w3-button w3-large w3-display-topright w3-hover-white">&times</span>
+                              class="w3-button w3-large w3-round w3-display-topright w3-hover-white">&times
+                        </span>
                         <h3>
                             {% if "error" in message.tags %}
                                 Fehler!
