Update letters index

--- a/elternbrief/letters/templates/letters/base.html
+++ b/elternbrief/letters/templates/letters/base.html
@@ -22,7 +22,7 @@
             font-family: 'Open Sans', sans-serif;
         }
 
-        h1, .w3-bar, button {
+        h1, h2, .w3-bar, button {
             font-family: 'Montserrat', sans-serif;
         }
 
