--- a/elternbrief/letters/templates/letters/letters_index.html
+++ b/elternbrief/letters/templates/letters/letters_index.html
@@ -7,16 +7,21 @@
 {% block content %}
     <div class="w3-row-padding w3-padding-64 w3-container">
         <div class="w3-content w3-center">
-            <p>Folgende Elternbriefe müssen bestätigt werden:</p>
+            <p>Folgende Elternbriefe liegen vor:</p>
 
-            {# Display all children of user as well as all corresponding letters. #}
             {% for child in children_list %}
-                <h3>{{ child }}</h3>
-                {% with child_id=child.id %}
-                    {% for letter in letters|get_item:child_id %}
-                        <p><a href="{% url 'letters:letter_detail'  letter.pk %}">{{ letter }}</a></p>
-                    {% endfor %}
-                {% endwith %}
+                <div class="w3-card w3-margin">
+                    <header class="w3-container w3-theme">
+                        <h2>{{ child }}</h2>
+                    </header>
+                    <div class="w3-container">
+                        {% with child_id=child.id %}
+                            {% for letter in letters|get_item:child_id %}
+                                <p><a href="{% url 'letters:letter_detail'  letter.pk %}">{{ letter }}</a></p>
+                            {% endfor %}
+                        {% endwith %}
+                    </div>
+                </div>
             {% endfor %}
         </div>
     </div>
