--- a/elternbrief/letters/templates/letters/letter_detail.html
+++ b/elternbrief/letters/templates/letters/letter_detail.html
@@ -5,45 +5,52 @@
 
 {% block content %}
     <div class="w3-row-padding w3-padding-64 w3-container w3-center">
-            {# Just an empty placeholder container to make the content stay centered. #}
-            <div class="w3-col l3 m2 w3-hide-small"><p></p></div>
+        {# Just an empty placeholder container to make the content stay centered. #}
+        <div class="w3-col l3 m2 w3-hide-small"><p></p></div>
 
-            <div class="w3-col l6 m8 s12">
-                <div class="w3-card-4">
+        <div class="w3-col l6 m8 s12">
+            <p>Sie betrachten diesen Brief gerade für den Schüler <b>{{ student }}.</b></p>
+            {% if response %}
+                <p>
+                    <i class="fa fa-check-circle" style="color: #4caf50;"></i>
+                    Sie haben diesen Brief bereits am {{ response.response_date }} bestätigt.
+                </p>
+            {% endif %}
 
-                    <header class="w3-container w3-theme-d2 w3-left-align">
-                        <h1>{{ letter }}</h1>
-                    </header>
+            <div class="w3-card-4">
+
+                <header class="w3-container w3-theme-d2 w3-left-align">
+                    <h1>{{ letter }}</h1>
+                </header>
+                <div class="w3-container w3-left-align">
+                    <p><b>Veröffentlichungsdatum:</b> {{ letter.date_published }}</p>
+                </div>
+
+                {% if letter.date_due %}
                     <div class="w3-container w3-left-align">
-                        <p><b>Veröffentlichungsdatum:</b> {{ letter.date_published }}</p>
+                        <p><b>Fällig bis:</b> {{ letter.date_due }}</p>
                     </div>
+                {% endif %}
 
-                    {% if letter.date_due %}
-                        <div class="w3-container w3-left-align">
-                            <p><b>Fällig bis:</b> {{ letter.date_due }}</p>
-                        </div>
-                    {% endif %}
-
-                    {% if letter.teacher %}
-                        <div class="w3-container w3-left-align">
-                            <p><b>Zuständige Lehrkraft:</b> {{ letter.teacher }}</p>
-                        </div>
-                    {% endif %}
-
+                {% if letter.teacher %}
                     <div class="w3-container w3-left-align">
-                        <p><b>Muss {% if not letter.confirmation %}nicht {% endif %}bestätigt werden.</b> <i
-                                class="fa fa-info-circle"></i></p>
+                        <p><b>Zuständige Lehrkraft:</b> {{ letter.teacher }}</p>
                     </div>
+                {% endif %}
 
-                    <div class="w3-container" id="canvas">
-                        <embed src="{{ letter.document.url }}" type="application/pdf" width="100%" height="800px"/>
-                    </div>
+                <div class="w3-container w3-left-align">
+                    <p><b>Muss {% if not letter.confirmation %}nicht {% endif %}bestätigt werden.</b> <i
+                            class="fa fa-info-circle"></i></p>
+                </div>
+
+                <div class="w3-container" id="canvas">
+                    <embed src="{{ letter.document.url }}" type="application/pdf" width="100%" height="800px"/>
                 </div>
             </div>
+        </div>
 
-            {# Another empty placeholder container to make the content stay centered. #}
-            <div class="w3-col l3 m2 w3-hide-small"><p></p></div>
-
+        {# Another empty placeholder container to make the content stay centered. #}
+        <div class="w3-col l3 m2 w3-hide-small"><p></p></div>
 
 
     </div>
