--- a/elternbrief/letters/templates/letters/letter_detail.html
+++ b/elternbrief/letters/templates/letters/letter_detail.html
@@ -10,7 +10,7 @@
 
         <div class="w3-col l6 m8 s12">
             <p>Sie betrachten diesen Brief gerade für den Schüler <b>{{ student }}.</b></p>
-            {% if response %}
+            {% if response and letter.confirmation%}
                 <p>
                     <i class="fa fa-check-circle" style="color: #4caf50;"></i>
                     Sie haben diesen Brief bereits am {{ response.response_date }} bestätigt.
@@ -46,12 +46,20 @@
                 <div class="w3-container" id="canvas">
                     <embed src="{{ letter.document.url }}" type="application/pdf" width="100%" height="800px"/>
                 </div>
+
+                {# Section for responding to a letter: #}
+                {% if not response and letter.confirmation%}
+                    <form class="w3-container w3-margin w3-left-align" action="{% url 'letters:letter_confirm' student.id letter.id %}" method="post">
+                        {% csrf_token %}
+                        <h3>Diesen Brief bestätigen:</h3>
+                        <button class="w3-btn w3-theme-d2 w3-margin" type="submit"><i class="fa fa-check"></i> Bestätigen</button>
+                    </form>
+                {% endif %}
             </div>
         </div>
 
         {# Another empty placeholder container to make the content stay centered. #}
         <div class="w3-col l3 m2 w3-hide-small"><p></p></div>
-
 
     </div>
 {% endblock %}
