Use rounded corners for containers and inputs

--- a/elternbrief/letters/templates/letters/letter_detail.html
+++ b/elternbrief/letters/templates/letters/letter_detail.html
@@ -17,9 +17,9 @@
                 </p>
             {% endif %}
 
-            <div class="w3-card-4">
+            <div class="w3-card-4 w3-round">
 
-                <header class="w3-container w3-theme-d2 w3-left-align">
+                <header class="w3-container w3-theme-d2 w3-left-align w3-round">
                     <h1>{{ letter }}</h1>
                 </header>
                 <div class="w3-container w3-left-align">
