--- a/elternbrief/letters/templates/letters/letters_index.html
+++ b/elternbrief/letters/templates/letters/letters_index.html
@@ -10,8 +10,8 @@
             <p>Folgende Elternbriefe liegen vor:</p>
 
             {% for child in children_list %}
-                <div class="w3-card w3-margin">
-                    <header class="w3-container w3-theme">
+                <div class="w3-card w3-margin w3-round">
+                    <header class="w3-container w3-theme w3-round">
                         <h2>{{ child }}</h2>
                     </header>
                     <div class="w3-container">
