--- a/elternbrief/letters/templates/letters/letter_detail.html
+++ b/elternbrief/letters/templates/letters/letter_detail.html
@@ -1,7 +1,7 @@
 {% extends 'letters/base.html' %}
 {% load static %}
 
-{% block title %}{{ letter }}t{% endblock %}
+{% block title %}{{ letter }}{% endblock %}
 
 {% block content %}
     <div class="w3-row-padding w3-padding-64 w3-container w3-center">
