--- a/elternbrief/letters/templates/letters/base.html
+++ b/elternbrief/letters/templates/letters/base.html
@@ -68,6 +68,10 @@
             position: fixed;
             margin-top: 50px;
         }
+
+        a:hover {
+            text-decoration: none;
+        }
     </style>
 </head>
 
